--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "a4_fahad",
+  "name": "week10firebaseauth",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,18 +11,19 @@
   "dependencies": {
     "@react-navigation/native": "^7.1.16",
     "@react-navigation/native-stack": "^7.3.23",
-    "expo": "~53.0.20",
+    "expo": "~53.0.17",
     "expo-status-bar": "~2.2.3",
-    "firebase": "^12.0.0",
+    "firebase": "^11.10.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1"
+    "react-native-screens": "~4.11.1",
+    "save": "^2.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.2",
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
